--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 You are in Gravette, Arkansas 72736 facing Eastbound at 7:12PM.
+<iframe src="https://giphy.com/embed/SvpC1CrLGOw9y5aiXn" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
+</iframe>
+<p>
+<a href="https://giphy.com/gifs/empire-foxtv-empire-fox-empirefox-SvpC1CrLGOw9y5aiXn">
+</p>
