--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<iframe src="https://giphy.com/embed/SvpC1CrLGOw9y5aiXn" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen>
-</iframe>
-<p>
-<a href="https://giphy.com/gifs/empire-foxtv-empire-fox-empirefox-SvpC1CrLGOw9y5aiXn">
-</p>
+<head>
+
+  <meta charset="utf-8" />
+
+  <title>SGHPA Demo</title>
+
+  <style type="text/css">
+    body:before {
+      content: attr(message);
+    }
+  </style>
+
+</head>
+
+<body>
+
+  <script>
+    (function(){
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+        // REMOVE THIS - just showing the redirect route in the UI
+        document.body.setAttribute('message', 'This page was redirected by 404.html, from the route: ' + redirect);
+      }
+      else {
+        // REMOVE THIS - just showing the redirect route in the UI
+        document.body.setAttribute('message', 'This page was loaded directly from the index.html file');
+      }
+    })();
+  </script>
+
+</body>
+
+
+</html>
