--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Graduation Completetion</title>
     </head>
     <body>
         <h1>Testing this shit</h1>
